<resources>
    <string name="app_name">Loustics School</string>
    <string name="QuestionMark">\?</string>
    <string name="next">Suivant</string>
    <string name="quitter">Abandonner</string>
    <string name="finish">Terminer</string>
    <string name="ChooseExerciseString">Choisis un type d\'exercice</string>
    <string name="mathematiques">Mathematiques</string>
    <string name="culture_generale">Culture Generale</string>
    <string name="logoutString">Se déconnecter</string>
    <string name="version">Version 1.0</string>
    <string name="try_again">Essaye encore !</string>
    <string name="almost_there">Tu peux y arriver !</string>
    <string name="almost_perfect">Presque Parfait !</string>
    <string name="perfect">Sans faute !</string>
    <string name="rcprep">Voici un recapitulatif de tes reponses :</string>
    <string name="chgex">Changer\nd\'exercice</string>
    <string name="retry">Recommencer</string>
    <string name="expl">( appuie brievement sur tes erreurs pour voir leur corrction\nou plus longtemps pour les corriger )</string>
    <string name="title_place_holder">Title_place_holder</string>
    <string name="score_place_holder">Score_place_holder</string>
    <string name="launchex">Lancer l\'exercice</string>
    <string name="nbq">Nombre de questions</string>
    <string name="mult">Multiplicatons</string>
    <string name="div">Divisions</string>
    <string name="add">Additions</string>
    <string name="sub">Soustractions</string>
    <string name="typeop">Type d\'operations</string>
    <string name="createaccount">Creer un compte</string>
    <string name="name">Prenom</string>
    <string name="create">Creer</string>
    <string name="question_place_holder">question_place_holder</string>
    <string name="a1">Answser1</string>
    <string name="a4">Answser4</string>
    <string name="a3">Answser3</string>
    <string name="a2">Answser2</string>
    <string name="percentage">percentage_place_holder</string>
    <string name="qnb">nb_question_place_holder</string>
    <string name="dtph">date_hour_place_holder</string>
    <string name="greet">Greetings_place_holder</string>
    <string name="who_is_using_app">Qui utilise l\'application ?</string>
    <string name="profie_hint">Appuie sur ton profil ci dessous</string>
    <string name="supress_hint">(Appui long pour supprimer)</string>
    <string name="not_in_list">Pas dans la liste ?</string>
    <string name="use_btn_hint">pas de soucis!\nutilisez les boutons ci dessous :</string>
    <string name="create_account">Creer un compte</string>
    <string name="go_as_guest">Continuer en invité</string>
    <string name="calc_ph">calc_ph</string>
    <string name="explain_sting">Que veux tu travailler ?</string>
    <string name="adv_ops">Options Avancés</string>
    <string name="random">Aleatoire</string>
    <string name="row_ph">row_place_holder</string>
</resources>