<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/score_place_holder"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/QALayout">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/calc_ph"
            android:textSize="48sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="\?"
            android:fontFamily="casual"
            android:minWidth="48dp"
            android:hint="@string/QuestionMark"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="48sp"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <!-- advanced feature if i have the time -> go back one question -->

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="?attr/colorOnError"
            android:text="@string/quitter"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>

